// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-swc > should apply multiply environment configs correctly 1`] = `
[
  {
    "module": {
      "rules": [
        {
          "include": [
            {
              "and": [
                "<ROOT>/packages/compat/plugin-swc/tests",
                {
                  "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
                },
              ],
            },
            /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
          ],
          "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
          "use": [
            {
              "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
              "options": {
                "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                "env": {
                  "coreJs": "3.36",
                  "mode": "usage",
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "extensions": {
                  "lockCorejsVersion": {
                    "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                    "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
                  },
                  "lodash": {
                    "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                    "ids": [
                      "lodash",
                      "lodash-es",
                    ],
                  },
                },
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorVersion": "2022-03",
                    "legacyDecorator": false,
                    "react": {
                      "refresh": true,
                      "runtime": "classic",
                    },
                  },
                },
              },
            },
          ],
        },
        {
          "mimetype": {
            "or": [
              "text/javascript",
              "application/javascript",
            ],
          },
          "resolve": {
            "fullySpecified": false,
          },
          "use": [
            {
              "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
              "options": {
                "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                "env": {
                  "coreJs": "3.36",
                  "mode": "usage",
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "extensions": {
                  "lockCorejsVersion": {
                    "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                    "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
                  },
                  "lodash": {
                    "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                    "ids": [
                      "lodash",
                      "lodash-es",
                    ],
                  },
                },
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorVersion": "2022-03",
                    "legacyDecorator": false,
                    "react": {
                      "refresh": true,
                      "runtime": "classic",
                    },
                  },
                },
              },
            },
          ],
        },
      ],
    },
  },
  {
    "module": {
      "rules": [
        {
          "include": [
            {
              "and": [
                "<ROOT>/packages/compat/plugin-swc/tests",
                {
                  "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
                },
              ],
            },
            /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
          ],
          "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
          "use": [
            {
              "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
              "options": {
                "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                "env": {
                  "coreJs": "3.36",
                  "mode": "usage",
                  "targets": [
                    "node >= 16",
                  ],
                },
                "extensions": {
                  "lockCorejsVersion": {
                    "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                    "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
                  },
                  "lodash": {
                    "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                    "ids": [
                      "lodash",
                      "lodash-es",
                    ],
                  },
                },
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "react": {
                      "refresh": false,
                      "runtime": "classic",
                    },
                    "useDefineForClassFields": false,
                  },
                },
              },
            },
          ],
        },
        {
          "mimetype": {
            "or": [
              "text/javascript",
              "application/javascript",
            ],
          },
          "resolve": {
            "fullySpecified": false,
          },
          "use": [
            {
              "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
              "options": {
                "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                "env": {
                  "coreJs": "3.36",
                  "mode": "usage",
                  "targets": [
                    "node >= 16",
                  ],
                },
                "extensions": {
                  "lockCorejsVersion": {
                    "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                    "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
                  },
                  "lodash": {
                    "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                    "ids": [
                      "lodash",
                      "lodash-es",
                    ],
                  },
                },
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "react": {
                      "refresh": false,
                      "runtime": "classic",
                    },
                    "useDefineForClassFields": false,
                  },
                },
              },
            },
          ],
        },
      ],
    },
  },
]
`;

exports[`plugin-swc > should apply source.include and source.exclude correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "exclude": [
          /bar/,
        ],
        "include": [
          {
            "and": [
              "<ROOT>/packages/compat/plugin-swc/tests",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
          /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
          /foo/,
        ],
        "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
            "options": {
              "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
              "env": {
                "coreJs": "3.36",
                "mode": "usage",
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "extensions": {
                "lockCorejsVersion": {
                  "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                  "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
                },
                "lodash": {
                  "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                  "ids": [
                    "lodash",
                    "lodash-es",
                  ],
                },
              },
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                  "react": {
                    "refresh": true,
                    "runtime": "classic",
                  },
                  "useDefineForClassFields": false,
                },
              },
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "resolve": {
          "fullySpecified": false,
        },
        "use": [
          {
            "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
            "options": {
              "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
              "env": {
                "coreJs": "3.36",
                "mode": "usage",
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "extensions": {
                "lockCorejsVersion": {
                  "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                  "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
                },
                "lodash": {
                  "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                  "ids": [
                    "lodash",
                    "lodash-es",
                  ],
                },
              },
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                  "react": {
                    "refresh": true,
                    "runtime": "classic",
                  },
                  "useDefineForClassFields": false,
                },
              },
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugin-swc > should disable react refresh when dev.hmr is false 1`] = `
{
  "rules": [
    {
      "include": [
        {
          "and": [
            "<ROOT>/packages/compat/plugin-swc/tests",
            {
              "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
            },
          ],
        },
        /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      ],
      "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
          "options": {
            "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
            "env": {
              "coreJs": "3.36",
              "mode": "usage",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "decoratorMetadata": true,
                "legacyDecorator": true,
                "react": {
                  "refresh": false,
                  "runtime": "classic",
                },
                "useDefineForClassFields": false,
              },
            },
          },
        },
      ],
    },
    {
      "mimetype": {
        "or": [
          "text/javascript",
          "application/javascript",
        ],
      },
      "resolve": {
        "fullySpecified": false,
      },
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
          "options": {
            "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
            "env": {
              "coreJs": "3.36",
              "mode": "usage",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "decoratorMetadata": true,
                "legacyDecorator": true,
                "react": {
                  "refresh": false,
                  "runtime": "classic",
                },
                "useDefineForClassFields": false,
              },
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`plugin-swc > should disable react refresh when target is not web 1`] = `
{
  "rules": [
    {
      "include": [
        {
          "and": [
            "<ROOT>/packages/compat/plugin-swc/tests",
            {
              "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
            },
          ],
        },
        /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      ],
      "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
          "options": {
            "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
            "env": {
              "coreJs": "3.36",
              "mode": "usage",
              "targets": [
                "node >= 16",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "decoratorMetadata": true,
                "legacyDecorator": true,
                "react": {
                  "refresh": false,
                  "runtime": "classic",
                },
                "useDefineForClassFields": false,
              },
            },
          },
        },
      ],
    },
    {
      "mimetype": {
        "or": [
          "text/javascript",
          "application/javascript",
        ],
      },
      "resolve": {
        "fullySpecified": false,
      },
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
          "options": {
            "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
            "env": {
              "coreJs": "3.36",
              "mode": "usage",
              "targets": [
                "node >= 16",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "decoratorMetadata": true,
                "legacyDecorator": true,
                "react": {
                  "refresh": false,
                  "runtime": "classic",
                },
                "useDefineForClassFields": false,
              },
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`plugin-swc > should disable react refresh when target is not web 2`] = `
{
  "rules": [
    {
      "include": [
        {
          "and": [
            "<ROOT>/packages/compat/plugin-swc/tests",
            {
              "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
            },
          ],
        },
        /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      ],
      "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
          "options": {
            "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
            "env": {
              "coreJs": "3.36",
              "mode": "usage",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "decoratorMetadata": true,
                "legacyDecorator": true,
                "react": {
                  "refresh": true,
                  "runtime": "classic",
                },
                "useDefineForClassFields": false,
              },
            },
          },
        },
      ],
    },
    {
      "mimetype": {
        "or": [
          "text/javascript",
          "application/javascript",
        ],
      },
      "resolve": {
        "fullySpecified": false,
      },
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
          "options": {
            "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
            "env": {
              "coreJs": "3.36",
              "mode": "usage",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "decoratorMetadata": true,
                "legacyDecorator": true,
                "react": {
                  "refresh": true,
                  "runtime": "classic",
                },
                "useDefineForClassFields": false,
              },
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`plugin-swc > should disable react refresh when target is not web 3`] = `
{
  "rules": [
    {
      "include": [
        {
          "and": [
            "<ROOT>/packages/compat/plugin-swc/tests",
            {
              "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
            },
          ],
        },
        /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      ],
      "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
          "options": {
            "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
            "env": {
              "coreJs": "3.36",
              "mode": "usage",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "decoratorMetadata": true,
                "legacyDecorator": true,
                "react": {
                  "refresh": false,
                  "runtime": "classic",
                },
                "useDefineForClassFields": false,
              },
            },
          },
        },
      ],
    },
    {
      "mimetype": {
        "or": [
          "text/javascript",
          "application/javascript",
        ],
      },
      "resolve": {
        "fullySpecified": false,
      },
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
          "options": {
            "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
            "env": {
              "coreJs": "3.36",
              "mode": "usage",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "decoratorMetadata": true,
                "legacyDecorator": true,
                "react": {
                  "refresh": false,
                  "runtime": "classic",
                },
                "useDefineForClassFields": false,
              },
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`plugin-swc > should set correct swc minimizer options in production 1`] = `
{
  "minimizer": [
    SwcMinimizerPlugin {
      "minifyOptions": {
        "cssMinify": undefined,
        "jsMinify": {
          "compress": false,
          "format": {
            "asciiOnly": true,
          },
          "mangle": false,
        },
      },
      "name": "swc-minimizer-plugin",
    },
    SwcMinimizerPlugin {
      "minifyOptions": {
        "cssMinify": {},
        "jsMinify": undefined,
      },
      "name": "swc-minimizer-plugin",
    },
  ],
}
`;

exports[`plugin-swc > should set correct swc minimizer options using raw swc config 1`] = `
{
  "minimizer": [
    SwcMinimizerPlugin {
      "minifyOptions": {
        "cssMinify": undefined,
        "jsMinify": {
          "compress": false,
          "format": {
            "asciiOnly": true,
          },
          "mangle": false,
        },
      },
      "name": "swc-minimizer-plugin",
    },
    SwcMinimizerPlugin {
      "minifyOptions": {
        "cssMinify": {},
        "jsMinify": undefined,
      },
      "name": "swc-minimizer-plugin",
    },
  ],
}
`;

exports[`plugin-swc > should set multiple swc-loader 1`] = `
[
  {
    "include": [
      {
        "and": [
          "<ROOT>/packages/compat/plugin-swc/tests",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "use": [
      {
        "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
        "options": {
          "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
          "env": {
            "coreJs": "3.36",
            "mode": "usage",
            "targets": [
              "chrome >= 87",
              "edge >= 88",
              "firefox >= 78",
              "safari >= 14",
            ],
          },
          "extensions": {
            "lockCorejsVersion": {
              "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
              "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
            },
            "lodash": {
              "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
              "ids": [
                "lodash",
                "lodash-es",
              ],
            },
          },
          "jsc": {
            "externalHelpers": true,
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "preserveAllComments": true,
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "refresh": true,
                "runtime": "classic",
              },
              "useDefineForClassFields": true,
            },
          },
        },
      },
    ],
  },
  {
    "test": /override\\.ts/,
    "use": [
      {
        "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
        "options": {
          "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
          "env": {
            "coreJs": "3.36",
            "mode": "usage",
            "targets": [
              "chrome >= 87",
              "edge >= 88",
              "firefox >= 78",
              "safari >= 14",
            ],
          },
          "extensions": {
            "lockCorejsVersion": {
              "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
              "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
            },
            "lodash": {
              "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
              "ids": [
                "lodash",
                "lodash-es",
              ],
            },
          },
          "jsc": {
            "externalHelpers": true,
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "preserveAllComments": true,
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "refresh": true,
                "runtime": "classic",
              },
              "useDefineForClassFields": false,
            },
          },
        },
      },
    ],
  },
  {
    "mimetype": {
      "or": [
        "text/javascript",
        "application/javascript",
      ],
    },
    "resolve": {
      "fullySpecified": false,
    },
    "use": [
      {
        "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
        "options": {
          "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
          "env": {
            "coreJs": "3.36",
            "mode": "usage",
            "targets": [
              "chrome >= 87",
              "edge >= 88",
              "firefox >= 78",
              "safari >= 14",
            ],
          },
          "extensions": {
            "lockCorejsVersion": {
              "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
              "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
            },
            "lodash": {
              "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
              "ids": [
                "lodash",
                "lodash-es",
              ],
            },
          },
          "jsc": {
            "externalHelpers": true,
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "preserveAllComments": true,
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "refresh": true,
                "runtime": "classic",
              },
              "useDefineForClassFields": true,
            },
          },
        },
      },
    ],
  },
]
`;

exports[`plugin-swc > should set swc minimizer in production 1`] = `
{
  "minimizer": [
    SwcMinimizerPlugin {
      "minifyOptions": {
        "cssMinify": undefined,
        "jsMinify": {
          "format": {
            "asciiOnly": true,
          },
          "mangle": true,
        },
      },
      "name": "swc-minimizer-plugin",
    },
    SwcMinimizerPlugin {
      "minifyOptions": {
        "cssMinify": {},
        "jsMinify": undefined,
      },
      "name": "swc-minimizer-plugin",
    },
  ],
}
`;

exports[`plugin-swc > should set swc-loader 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>/packages/compat/plugin-swc/tests",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
          /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
        ],
        "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
            "options": {
              "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
              "env": {
                "coreJs": "3.36",
                "mode": "usage",
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "extensions": {
                "lockCorejsVersion": {
                  "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                  "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
                },
                "lodash": {
                  "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                  "ids": [
                    "lodash",
                    "lodash-es",
                  ],
                },
              },
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                  "react": {
                    "refresh": true,
                    "runtime": "classic",
                  },
                  "useDefineForClassFields": false,
                },
              },
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "resolve": {
          "fullySpecified": false,
        },
        "use": [
          {
            "loader": "<ROOT>/packages/compat/plugin-swc/src/loader.cjs",
            "options": {
              "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
              "env": {
                "coreJs": "3.36",
                "mode": "usage",
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "extensions": {
                "lockCorejsVersion": {
                  "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                  "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
                },
                "lodash": {
                  "cwd": "<ROOT>/packages/compat/plugin-swc/tests",
                  "ids": [
                    "lodash",
                    "lodash-es",
                  ],
                },
              },
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                  "react": {
                    "refresh": true,
                    "runtime": "classic",
                  },
                  "useDefineForClassFields": false,
                },
              },
            },
          },
        ],
      },
    ],
  },
}
`;
